trying to get floders in sync

--- a/M1/d4/exercises/Into to Python - part 6.ipynb
+++ b/M1/d4/exercises/Into to Python - part 6.ipynb
@@ -1541,6 +1541,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace"
+   ]
   }
  ],
  "metadata": {
