--- a/M1/d3/01_workbooks/Into to Python - part 4.ipynb
+++ b/M1/d3/01_workbooks/Into to Python - part 4.ipynb
@@ -202,9 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\nFalse\nFalse\nTrue\nFalse\nFalse\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"y\" in \"Python\")\n",
     "print(\"x\" in \"Python\")\n",
@@ -672,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
