--- a/M1/d7/100-pandas-puzzles.ipynb
+++ b/M1/d7/100-pandas-puzzles.ipynb
@@ -57,12 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'1.1.3'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,12 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\nINSTALLED VERSIONS\n------------------\ncommit           : db08276bc116c438d3fdee492026f8223584c477\npython           : 3.7.9.final.0\npython-bits      : 64\nOS               : Linux\nOS-release       : 4.4.0-19041-Microsoft\nVersion          : #488-Microsoft Mon Sep 01 13:43:00 PST 2020\nmachine          : x86_64\nprocessor        : x86_64\nbyteorder        : little\nLC_ALL           : None\nLANG             : en_US.UTF-8\nLOCALE           : en_US.UTF-8\n\npandas           : 1.1.3\nnumpy            : 1.19.2\npytz             : 2020.4\ndateutil         : 2.8.1\npip              : 20.2.4\nsetuptools       : 50.3.1.post20201107\nCython           : 0.29.21\npytest           : 6.1.1\nhypothesis       : None\nsphinx           : 3.2.1\nblosc            : None\nfeather          : None\nxlsxwriter       : 1.3.7\nlxml.etree       : 4.6.2\nhtml5lib         : 1.1\npymysql          : None\npsycopg2         : None\njinja2           : 2.11.2\nIPython          : 7.19.0\npandas_datareader: None\nbs4              : 4.9.3\nbottleneck       : 1.3.2\nfsspec           : 0.8.3\nfastparquet      : None\ngcsfs            : None\nmatplotlib       : 3.3.2\nnumexpr          : 2.7.1\nodfpy            : None\nopenpyxl         : 3.0.5\npandas_gbq       : None\npyarrow          : None\npytables         : None\npyxlsb           : None\ns3fs             : None\nscipy            : 1.5.2\nsqlalchemy       : 1.3.20\ntables           : 3.6.1\ntabulate         : None\nxarray           : None\nxlrd             : 1.2.0\nxlwt             : 1.3.0\nnumba            : 0.51.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.show_versions()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,12 +135,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  7.0       2       no\n9    dog  3.0       1       no\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "data = {'animal': ['cat', 'cat', 'snake', 'dog', 'dog', 'cat', 'snake', 'cat', 'dog', 'dog'],\n",
+    "        'age': [2.5, 3, 0.5, np.nan, 5, 2, 4.5, np.nan, 7, 3],\n",
+    "        'visits': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'priority': ['yes', 'yes', 'no', 'yes', 'no', 'no', 'no', 'yes', 'no', 'no']}\n",
+    "\n",
+    "labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "index = labels \n",
+    "\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,12 +173,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "            age     visits\n",
+       "count  8.000000  10.000000\n",
+       "mean   3.437500   1.900000\n",
+       "std    2.007797   0.875595\n",
+       "min    0.500000   1.000000\n",
+       "25%    2.375000   1.000000\n",
+       "50%    3.000000   2.000000\n",
+       "75%    4.625000   2.750000\n",
+       "max    7.000000   3.000000"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>visits</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>8.000000</td>\n      <td>10.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>3.437500</td>\n      <td>1.900000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>2.007797</td>\n      <td>0.875595</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.500000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>2.375000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>3.000000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>4.625000</td>\n      <td>2.750000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>7.000000</td>\n      <td>3.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,12 +211,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  animal  age  visits priority\n",
+       "0    cat  2.5       1      yes\n",
+       "1    cat  3.0       3      yes\n",
+       "2  snake  0.5       2       no"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>animal</th>\n      <th>age</th>\n      <th>visits</th>\n      <th>priority</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>cat</td>\n      <td>2.5</td>\n      <td>1</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>cat</td>\n      <td>3.0</td>\n      <td>3</td>\n      <td>yes</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>snake</td>\n      <td>0.5</td>\n      <td>2</td>\n      <td>no</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "df.head(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,12 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age\n0    cat  2.5\n1    cat  3.0\n2  snake  0.5\n3    dog  NaN\n4    dog  5.0\n5    cat  2.0\n6  snake  4.5\n7    cat  NaN\n8    dog  7.0\n9    dog  3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "subselection = df[[\"animal\",\"age\"]]\n",
+    "print(subselection)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,12 +271,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  animal  age\n",
+       "3    dog  NaN\n",
+       "4    dog  5.0\n",
+       "8    dog  7.0"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>animal</th>\n      <th>age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3</th>\n      <td>dog</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>dog</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>dog</td>\n      <td>7.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "\n",
+    "rows = [3,4,8]\n",
+    "columns = ['animal','age']\n",
+    "df.loc[rows,columns]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,12 +307,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  7.0       2       no\n9    dog  3.0       1       no\nEmpty DataFrame\nColumns: [animal, age, visits, priority]\nIndex: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)\n",
+    "df_mod = df[(df.visits > 3)]\n",
+    "print(df_mod)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,12 +335,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  7.0       2       no\n9    dog  3.0       1       no\n  animal  age  visits priority\n3    dog  NaN       3      yes\n7    cat  NaN       1      yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)\n",
+    "print(df[df.age.isna()])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,12 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n5    cat  2.0       3       no\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[(df.animal == \"cat\") & (df.age < 3)])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,12 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n5    cat  2.0       3       no\n9    dog  3.0       1       no\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[(df.age >= 2) & (df.age <= 4)])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -256,12 +414,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  1.5       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  7.0       2       no\n9    dog  3.0       1       no\n  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  1.5       2       no\n5    cat  1.5       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  7.0       2       no\n9    dog  3.0       1       no\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df)\n",
+    "df.loc[5,'age'] = 1.5\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,12 +442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.visits.sum())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,12 +468,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The mean age of cats is 2.3333333333333335\nThe mean age of dogs is 3.8333333333333335\nTHe mean age of snakes is 2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "cats =df[(df.animal == 'cat')]\n",
+    "print(\"The mean age of cats is\", cats.age.mean())\n",
+    "\n",
+    "dogs =df[(df.animal == 'dog')]\n",
+    "print(\"The mean age of dogs is\", dogs.age.mean())\n",
+    "\n",
+    "snakes =df[(df.animal == 'snake')]\n",
+    "print(\"THe mean age of snakes is\", snakes.age.mean())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,12 +501,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   animal  age  visits priority\n9     dog  3.0       1       no\n10    dog  4.0       5      yes\n11    dog  4.0       5      yes\n12    dog  4.0       5      yes \n\n{'animal': 'dog', 'age': 4.0, 'visits': 5, 'priority': 'Yes'} \n\n   animal  age  visits priority\n9     dog  3.0       1       no\n10    dog  4.0       5      yes\n11    dog  4.0       5      yes\n12    dog  4.0       5      yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df,\"\\n\")\n",
+    "addrow = {'animal':\"dog\",'age':4.0, 'visits':5, 'priority':'yes'}\n",
+    "print(add_row,\"\\n\")\n",
+    "#df = df.append(addrow,ignore_index=True)\n",
+    "print(df)\n",
+    "df = df.drop([9,10], axis = 0)"
+   ]
   },
   {
    "cell_type": "markdown",
