more exercises completed

--- a/M1/d7/100-pandas-puzzles.ipynb
+++ b/M1/d7/100-pandas-puzzles.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
@@ -316,14 +316,28 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  7.0       2       no\n9    dog  3.0       1       no\nEmpty DataFrame\nColumns: [animal, age, visits, priority]\nIndex: []\n"
+      "   animal  age  visits  priority\n0     cat  2.5       1      True\n1     cat  3.0       3      True\n2  python  0.5       2     False\n3     dog  NaN       3      True\n4     dog  5.0       2     False\n5     cat  2.0       3     False\n6  python  4.5       1     False\n7     cat  NaN       1      True\n8     dog  7.0       2     False\n9     dog  3.0       1     False\n"
      ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  animal  age  visits  priority\n",
+       "1    cat  3.0       3      True\n",
+       "3    dog  NaN       3      True\n",
+       "5    cat  2.0       3     False"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>animal</th>\n      <th>age</th>\n      <th>visits</th>\n      <th>priority</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>cat</td>\n      <td>3.0</td>\n      <td>3</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>dog</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>cat</td>\n      <td>2.0</td>\n      <td>3</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 116
     }
    ],
    "source": [
     "print(df)\n",
-    "df_mod = df[(df.visits > 3)]\n",
-    "print(df_mod)\n"
+    "df_mod = df[(df.visits > 2)]\n",
+    "df_mod\n"
    ]
   },
   {
@@ -501,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +524,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "   animal  age  visits priority\n9     dog  3.0       1       no\n10    dog  4.0       5      yes\n11    dog  4.0       5      yes\n12    dog  4.0       5      yes \n\n{'animal': 'dog', 'age': 4.0, 'visits': 5, 'priority': 'Yes'} \n\n   animal  age  visits priority\n9     dog  3.0       1       no\n10    dog  4.0       5      yes\n11    dog  4.0       5      yes\n12    dog  4.0       5      yes\n"
+      "  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes \n\n{'animal': 'dog', 'age': 4.0, 'visits': 5, 'priority': 'Yes'} \n\n  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n8    dog  4.0       5      yes \n\n  animal  age  visits priority\n0    cat  2.5       1      yes\n1    cat  3.0       3      yes\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n4    dog  5.0       2       no\n5    cat  2.0       3       no\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n"
      ]
     }
    ],
@@ -518,9 +532,11 @@
     "print(df,\"\\n\")\n",
     "addrow = {'animal':\"dog\",'age':4.0, 'visits':5, 'priority':'yes'}\n",
     "print(add_row,\"\\n\")\n",
-    "#df = df.append(addrow,ignore_index=True)\n",
-    "print(df)\n",
-    "df = df.drop([9,10], axis = 0)"
+    "df = df.append(addrow,ignore_index=True)\n",
+    "print(df, \"\\n\")\n",
+    "#df = df.drop(df.iloc[8:, :] axis = 0)\n",
+    "df = df.iloc[:8]\n",
+    "print (df)"
    ]
   },
   {
@@ -532,12 +548,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "cat      4\n",
+       "dog      2\n",
+       "snake    2\n",
+       "Name: animal, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 98
+    }
+   ],
+   "source": [
+    "df.animal.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -548,12 +580,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits priority\n8    dog  7.0       2       no\n4    dog  5.0       2       no\n6  snake  4.5       1       no\n1    cat  3.0       3      yes\n9    dog  3.0       1       no\n0    cat  2.5       1      yes\n5    cat  2.0       3       no\n2  snake  0.5       2       no\n3    dog  NaN       3      yes\n7    cat  NaN       1      yes\n/n\n  animal  age  visits priority\n0    cat  2.5       1      yes\n6  snake  4.5       1       no\n7    cat  NaN       1      yes\n9    dog  3.0       1       no\n2  snake  0.5       2       no\n4    dog  5.0       2       no\n8    dog  7.0       2       no\n1    cat  3.0       3      yes\n3    dog  NaN       3      yes\n5    cat  2.0       3       no\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.sort_values(by = 'age', ascending=False))\n",
+    "print('/n')\n",
+    "print(df.sort_values(by = 'visits', ascending=True))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -564,12 +608,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  animal  age  visits  priority\n0    cat  2.5       1      True\n1    cat  3.0       3      True\n2  snake  0.5       2     False\n3    dog  NaN       3      True\n4    dog  5.0       2     False\n5    cat  2.0       3     False\n6  snake  4.5       1     False\n7    cat  NaN       1      True\n8    dog  7.0       2     False\n9    dog  3.0       1     False\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.replace({'priority': {'yes': True, 'no': False}})\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -580,12 +635,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   animal  age  visits  priority\n",
+       "0     cat  2.5       1      True\n",
+       "1     cat  3.0       3      True\n",
+       "2  python  0.5       2     False\n",
+       "3     dog  NaN       3      True\n",
+       "4     dog  5.0       2     False\n",
+       "5     cat  2.0       3     False\n",
+       "6  python  4.5       1     False\n",
+       "7     cat  NaN       1      True\n",
+       "8     dog  7.0       2     False\n",
+       "9     dog  3.0       1     False"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>animal</th>\n      <th>age</th>\n      <th>visits</th>\n      <th>priority</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>cat</td>\n      <td>2.5</td>\n      <td>1</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>cat</td>\n      <td>3.0</td>\n      <td>3</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>python</td>\n      <td>0.5</td>\n      <td>2</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>dog</td>\n      <td>NaN</td>\n      <td>3</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>dog</td>\n      <td>5.0</td>\n      <td>2</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>cat</td>\n      <td>2.0</td>\n      <td>3</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>python</td>\n      <td>4.5</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>cat</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>dog</td>\n      <td>7.0</td>\n      <td>2</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>dog</td>\n      <td>3.0</td>\n      <td>1</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 114
+    }
+   ],
+   "source": [
+    "df = df.replace({'animal': {'snake': 'python'}})\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,12 +676,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "               age  priority\n",
+       "animal visits               \n",
+       "cat    1       2.5       1.0\n",
+       "       3       2.5       0.5\n",
+       "dog    1       3.0       0.0\n",
+       "       2       6.0       0.0\n",
+       "       3       NaN       1.0\n",
+       "python 1       4.5       0.0\n",
+       "       2       0.5       0.0"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>age</th>\n      <th>priority</th>\n    </tr>\n    <tr>\n      <th>animal</th>\n      <th>visits</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">cat</th>\n      <th>1</th>\n      <td>2.5</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2.5</td>\n      <td>0.5</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">dog</th>\n      <th>1</th>\n      <td>3.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>6.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">python</th>\n      <th>1</th>\n      <td>4.5</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.5</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 120
+    }
+   ],
+   "source": [
+    "pivot1 = pd.pivot_table(data=df, index=['animal','visits'])\n",
+    "pivot1 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -630,12 +733,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "    A\n0   1\n1   2\n2   2\n3   3\n4   4\n5   5\n6   5\n7   5\n8   6\n9   7\n10  7\n   A\n0  1\n1  2\n3  3\n4  4\n5  5\n8  6\n9  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame({'A': [1, 2, 2, 3, 4, 5, 5, 5, 6, 7, 7]})\n",
+    "print(df1)\n",
+    "print(df1.drop_duplicates(subset='A'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -651,12 +766,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "          0         1         2\n0  0.076691  0.420522  0.175112\n1  0.849986  0.154573  0.480353\n2  0.717042  0.074406  0.320477\n3  0.484904  0.126214  0.077984\n4  0.973247  0.724004  0.042205\n0    0.620374\n1    0.299944\n2    0.219226\ndtype: float64\n          0         1         2\n0  0.076691  0.420522  0.175112\n1  0.849986  0.154573  0.480353\n2  0.717042  0.074406  0.320477\n3  0.484904  0.126214  0.077984\n4  0.973247  0.724004  0.042205\n          0         1         2\n0 -0.543683  0.120578 -0.044114\n1  0.229612 -0.145371  0.261126\n2  0.096668 -0.225538  0.101251\n3 -0.135470 -0.173729 -0.141242\n4  0.352873  0.424060 -0.177021\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame(np.random.random(size=(5, 3))) # a 5x3 frame of float values\n",
+    "print(df1)\n",
+    "avgcalc=df1.mean(axis=0)\n",
+    "print(avgcalc)\n",
+    "df12 = df1 - df1.mean(axis=0)\n",
+    "print(df1)\n",
+    "print(df12)\n",
+    "\n",
+    "\n",
+    "  \n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -672,12 +808,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "a    2.552313\nb    1.354896\nc    2.273284\nd    2.504331\ne    2.304745\nf    1.658661\ng    2.612816\nh    2.206021\ni    2.928618\nj    2.159547\ndtype: float64\n\n1.354895950139873\n\nb\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(np.random.random(size=(5, 10)), columns=list('abcdefghij'))\n",
+    "sum_df = df.sum()\n",
+    "print(sum_df)\n",
+    "sum_df=sum_df.sort_values(axis=0, ignore_index=False)\n",
+    "print()\n",
+    "print(sum_df[0])\n",
+    "print()\n",
+    "print(sum_df.idxmin(axis=0))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -693,7 +846,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#preserves orginal dataframe\n",
+    "e = df.drop_duplicates()\n",
+    "counts rows \n",
+    "len(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -708,12 +866,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "    1    2    3    4    5    6   7    8    9    10\n0  NaN  NaN  NaN  1.0  1.0  1.0   1  1.0  1.0  1.0\n1  2.0  2.0  2.0  NaN  2.0  NaN   2  NaN  2.0  NaN\n2  NaN  3.0  NaN  3.0  NaN  3.0   3  3.0  3.0  3.0\n3  4.0  NaN  4.0  NaN  4.0  NaN   4  NaN  4.0  4.0\n4  5.0  5.0  5.0  NaN  5.0  NaN   5  NaN  NaN  5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = {\n",
+    "1:[np.nan,2,np.nan,4,5],\n",
+    "2:[np.nan,2,3,np.nan,5],\n",
+    "3:[np.nan,2,np.nan,4,5],\n",
+    "4:[1,np.nan,3,np.nan,np.nan],\n",
+    "5:[1,2,np.nan,4,5],\n",
+    "6:[1,np.nan,3,np.nan,np.nan],\n",
+    "7:[1,2,3,4,5],\n",
+    "8:[1,np.nan,3,np.nan,np.nan],\n",
+    "9:[1,2,3,4,np.nan],\n",
+    "10:[1,np.nan,3,4,5]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -730,12 +912,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "   grps  vals\n0     c   235\n1     c    87\n2     c    23\n3     c    21\n4     c    14\n5     b    57\n6     b    54\n7     b    45\n8     b     3\n9     b     1\n10    a   345\n11    a    52\n12    a    12\n13    a     4\n14    a     3\n[('a',    grps  vals\n10    a   345\n11    a    52\n12    a    12\n13    a     4\n14    a     3), ('b',   grps  vals\n5    b    57\n6    b    54\n7    b    45\n8    b     3\n9    b     1), ('c',   grps  vals\n0    c   235\n1    c    87\n2    c    23\n3    c    21\n4    c    14)]\n   grps  vals\n10    a   345\n11    a    52\n12    a    12\n13    a     4\n14    a     3\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'grps': list('aaabbcaabcccbbc'), \n",
+    "                   'vals': [12,345,3,1,45,14,4,52,54,23,235,21,57,3,87]})\n",
+    "\n",
+    "df = df.sort_values(by=['grps','vals'], ascending=False, ignore_index=True)\n",
+    "print(df)\n",
+    "\n",
+    "splits = list(df.groupby('grps'))\n",
+    "print(splits)\n",
+    "print(splits[0][1])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
