--- a/M2/d1/Quiz_0_Lin_Alg.ipynb
+++ b/M2/d1/Quiz_0_Lin_Alg.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 83
+     "execution_count": 86
     }
    ],
    "source": [
@@ -501,9 +501,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 3  6]\n [ 9 12]]\n[[30 50 70]\n [10 10 10]\n [ 0 20  0]\n [20 20 30]]\n[[3, 5, 7], [1, 1, 1], [0, 2, 0], [2, 2, 3]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\n      >>> a = [[1, 2], [3, 4]]\\n      >>> scalar_mult(3, a)\\n      [[3, 6], [9, 12]]\\n      >>> b = [[3, 5, 7], [1, 1, 1], [0, 2, 0], [2, 2, 3]]\\n      >>> scalar_mult(10, b)\\n      [[30, 50, 70], [10, 10, 10], [0, 20, 0], [20, 20, 30]]\\n      >>> b\\n      [[3, 5, 7], [1, 1, 1], [0, 2, 0], [2, 2, 3]]\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 87
+    }
+   ],
    "source": [
     "def scalar_mult(s, m):\n",
     "  \n",
@@ -516,6 +534,11 @@
     "\n",
     "a = [[1, 2], [3, 4]]\n",
     "scalar_mult(3, a)\n",
+    "\n",
+    "b = [[3, 5, 7], [1, 1, 1], [0, 2, 0], [2, 2, 3]]\n",
+    "scalar_mult(10, b)\n",
+    "\n",
+    "print(b)\n",
     "\n",
     "\"\"\"\n",
     "      >>> a = [[1, 2], [3, 4]]\n",
@@ -542,8 +565,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "def row_times_column(m1, row, m2, column):\n",
-    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "      >>> row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 0)\n",
     "      19\n",
     "      >>> row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 1)\n",
@@ -552,24 +580,57 @@
     "      43\n",
     "      >>> row_times_column([[1, 2], [3, 4]], 1, [[5, 6], [7, 8]], 1)\n",
     "      50\n",
-    "    \"\"\""
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[19 22]\n [43 50]]\n[[31 19]\n [85 55]]\n[[39 54 69]\n [13 23 33]\n [14 19 24]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\n      >>> matrix_mult([[1, 2], [3,  4]], [[5, 6], [7, 8]])\\n      [[19, 22], [43, 50]]\\n      >>> matrix_mult([[1, 2, 3], [4,  5, 6]], [[7, 8], [9, 1], [2, 3]])\\n      [[31, 19], [85, 55]]\\n      >>> matrix_mult([[7, 8], [9, 1], [2, 3]], [[1, 2, 3], [4, 5, 6]])\\n      [[39, 54, 69], [13, 23, 33], [14, 19, 24]]\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 91
+    }
+   ],
    "source": [
     "def matrix_mult(m1, m2):\n",
-    "   \"\"\"\n",
+    "\n",
+    "   m1 = np.mat(m1)\n",
+    "   m2 = np.mat(m2)\n",
+    "\n",
+    "   total = np.matmul(m1,m2)\n",
+    "\n",
+    "   print(total)\n",
+    "\n",
+    "matrix_mult([[1, 2], [3,  4]], [[5, 6], [7, 8]])\n",
+    "\n",
+    "matrix_mult([[1, 2, 3], [4,  5, 6]], [[7, 8], [9, 1], [2, 3]])\n",
+    "    \n",
+    "matrix_mult([[7, 8], [9, 1], [2, 3]], [[1, 2, 3], [4, 5, 6]])\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
     "      >>> matrix_mult([[1, 2], [3,  4]], [[5, 6], [7, 8]])\n",
     "      [[19, 22], [43, 50]]\n",
     "      >>> matrix_mult([[1, 2, 3], [4,  5, 6]], [[7, 8], [9, 1], [2, 3]])\n",
     "      [[31, 19], [85, 55]]\n",
     "      >>> matrix_mult([[7, 8], [9, 1], [2, 3]], [[1, 2, 3], [4, 5, 6]])\n",
     "      [[39, 54, 69], [13, 23, 33], [14, 19, 24]]\n",
-    "    \"\"\""
+    "\"\"\""
    ]
   },
   {
@@ -581,12 +642,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[3]\n [4]\n [6]]\n[[3, 4, 6]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\n     >>> m = [[3, 4, 6]]\\n     >>> transpose(m)\\n     [[3], [4], [6]]\\n     >>> m\\n     [3, 4, 6]\\n     >>> m = [[3, 4, 6], [1, 5, 9]]\\n     >>> transpose(m)\\n     [[3, 1], [4, 5], [6, 9]]\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 95
+    }
+   ],
    "source": [
     "def transpose(m):\n",
-    "   \"\"\"\n",
+    "\n",
+    "  m = np.mat(m)\n",
+    "  total = m.transpose()\n",
+    "\n",
+    "  print(total)\n",
+    "\n",
+    "m = [[3, 4, 6]]\n",
+    "transpose(m)\n",
+    "print(m)\n",
+    "\n",
+    "\"\"\"\n",
     "     >>> m = [[3, 4, 6]]\n",
     "     >>> transpose(m)\n",
     "     [[3], [4], [6]]\n",
@@ -595,8 +684,15 @@
     "     >>> m = [[3, 4, 6], [1, 5, 9]]\n",
     "     >>> transpose(m)\n",
     "     [[3, 1], [4, 5], [6, 9]]\n",
-    "   \"\"\""
+    "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
