--- a/M2/d1/Quiz_1_Lin_Alg.ipynb
+++ b/M2/d1/Quiz_1_Lin_Alg.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Do your imports here"
+    "#Do your imports here\n",
+    "import numpy as np "
    ]
   },
   {
@@ -29,19 +30,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3.7416573867739413\n"
+     ]
+    }
+   ],
    "source": [
     "# type a function that given a 3_dimensional vector it is able to calculate its magnitude\n",
     "\n",
     "def magnitude_3(a,b,c):\n",
+    "    vec = np.array([a,b,c])\n",
+    "    mag = np.linalg.norm(vector)\n",
+    "    print(magnitude)\n",
     "\n",
     "# type a function that given a n_dimensional vector it is able to calculate its magnitude\n",
     "# if you want to try this from python (not jupyter notebook) https://docs.python.org/3/library/argparse.html would be a good addition\n",
     "# if you are doing this from a jupyter notebook only, you can try to promt the user for an input  \n",
     "\n",
-    "def magnitude_complete(#inputs):"
+    "def magnitude_complete(X):\n",
+    "    X = [int(X) for X in input('enter as many numbers as you want').split()]\n",
+    "    X = np.array(X)\n",
+    "    mag2 = np.linalg.norm(X)\n",
+    "    print(mag2)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "magnitude_complete(input('press enter to start'))\n"
    ]
   },
   {
@@ -148,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
