last problem done

--- a/M2/d1/Quiz_0_Lin_Alg.ipynb
+++ b/M2/d1/Quiz_0_Lin_Alg.ipynb
@@ -561,14 +561,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "19\n22\n43\n50\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\n      >>> row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 0)\\n      19\\n      >>> row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 1)\\n      22\\n      >>> row_times_column([[1, 2], [3, 4]], 1, [[5, 6], [7, 8]], 0)\\n      43\\n      >>> row_times_column([[1, 2], [3, 4]], 1, [[5, 6], [7, 8]], 1)\\n      50\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 103
+    }
+   ],
    "source": [
     "\n",
     "\n",
     "\n",
     "def row_times_column(m1, row, m2, column):\n",
+    "\n",
+    "  m1 = np.array(m1)\n",
+    "  m2 = np.array(m2)\n",
+    "  \n",
+    "  x = m1[row]\n",
+    "  y = m2[:,column]\n",
+    "\n",
+    "  t = x * y\n",
+    "  t = np.sum(t)\n",
+    "\n",
+    "  print(t)\n",
+    "\n",
+    "row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 0)\n",
+    "row_times_column([[1, 2], [3, 4]], 0, [[5, 6], [7, 8]], 1)\n",
+    "row_times_column([[1, 2], [3, 4]], 1, [[5, 6], [7, 8]], 0)\n",
+    "row_times_column([[1, 2], [3, 4]], 1, [[5, 6], [7, 8]], 1)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
