--- a/M3/d1_intro_to_ml/exercises/00_Lecture_Intro_to_sklearn.ipynb
+++ b/M3/d1_intro_to_ml/exercises/00_Lecture_Intro_to_sklearn.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from icecream import icecream"
    ]
   },
   {
@@ -401,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.1-final"
   }
  },
  "nbformat": 4,
